-boxed-layout fixed on shop page on mobile -single-product page gallery fixed on mobile and ipad -box-shadow removed from empty-cart button

--- a/assets/sass/0_base/_reset.scss
+++ b/assets/sass/0_base/_reset.scss
@@ -9,3 +9,9 @@
 .archive.woocommerce-page .main-raised {
   margin-bottom: 0;
 }
+
+@media (max-width: 480px) {
+  .archive.woocommerce-page .main.main-raised {
+    margin: 0;
+  }
+}
